Footer fixes, better visibility

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -83,8 +83,8 @@
 .footer .container {
   height: 60px;
   padding-top: 10px;
-  margin-top: 20px;
   border-top: 1px dotted #dcdcdc;
+  background: white;
 }
 
 .menu.nav a {
